--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/vcpkg"]
-	path = vendor/vcpkg
-	url = git@github.com:microsoft/vcpkg.git
+[submodule "dependencies"]
+	path = dependencies
+	url = git@github.com:g-truc/glm.git
