--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dependencies"]
-	path = dependencies
+[submodule "dependencies/glm"]
+	path = dependencies/glm
 	url = git@github.com:g-truc/glm.git
