Introduce Vulkan API

--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -1,8 +1,8 @@
-file(GLOB_RECURSE PLAYGROUND_SOURCE "*.cpp")
-
-add_executable(playground ${PLAYGROUND_SOURCE})
-
 include_directories(../dependencies)
 include_directories(../dependencies/glm)
 
-target_link_libraries(playground LINK_PUBLIC mirage)
+find_package(Vulkan REQUIRED)
+
+# playground apps
+add_subdirectory(engine)
+add_subdirectory(vulkan)
