clean up the CMakeLists

--- a/mirage/mirage/CMakeLists.txt
+++ b/mirage/mirage/CMakeLists.txt
@@ -1,14 +1,37 @@
-file(GLOB_RECURSE MIRAGE_SRC "*.cpp" "*.h" "*.hpp")
 
+file(GLOB_RECURSE MIRAGE_SRC "*.cpp" "*.h" "*.hpp")
 add_library(mirage SHARED ${MIRAGE_SRC})
+
+# Vulkan API dependency
+find_package(Vulkan REQUIRED)
+
+if(${Vulkan_FOUND})
+
+    message (STATUS "Vulkan was found in the system")
+    message (STATUS "Vulkan_INCLUDE_DIRS " ${Vulkan_INCLUDE_DIRS})
+    message (STATUS "Vulkan_LIBRARIES " ${Vulkan_LIBRARIES})
+
+    target_include_directories(mirage
+        PUBLIC
+            ../
+            ${SDL2_INCLUDE_DIRS}
+    )
+
+    target_include_directories(mirage
+        PUBLIC
+            ../
+    )
+
+    target_link_libraries(mirage
+        Vulkan::Vulkan
+    )
+
+else()
+
+    message (STATUS "Vulkan was not found in the system")
+
+endif()
 
 # dependencies
 include_directories(../dependencies)
 include_directories(../dependencies/glm)
-
-# libraries
-find_package(Vulkan REQUIRED)
-set(LIBRARIES "Vulkan::Vulkan")
-target_link_libraries(mirage Vulkan::Vulkan)
-
-target_include_directories(mirage PUBLIC ../)
