add better cmake extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,9 @@
 {
     "recommendations": [
+        "ms-vscode.cmake-tools",
         "ms-vscode.cpptools",
         "streetsidesoftware.code-spell-checker",
-        "eamodio.gitlens"
+        "eamodio.gitlens",
+        "twxs.cmake"
     ]
 }
