--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -15,15 +15,11 @@ function(buildExample EXAMPLE_NAME)
     endif()
 
     # link all source files
-    file(GLOB_RECURSE EXAMPLE_APP_SOURCE ${EXAMPLE_FOLDER}/*.cpp ${EXAMPLE_FOLDER}/*.h)
+    file(GLOB_RECURSE EXAMPLE_APP_SOURCE ${EXAMPLE_FOLDER}/*.cpp ${EXAMPLE_FOLDER}/*.h ${EXAMPLE_FOLDER}/*.hpp)
     # main() entry point
     if(NOT EXISTS ${EXAMPLE_FOLDER}/main.cpp AND NOT EXISTS ${EXAMPLE_FOLDER}/${EXAMPLE_NAME}.cpp)
         message(FATAL_ERROR "Project must contain either main.cpp or ${EXAMPLE_NAME}.cpp with the main() function")
     endif()
-
-    # link forked dependencies
-    include_directories(../dependencies)
-    include_directories(../dependencies/glm)
 
     # link libraries
     find_package(Vulkan REQUIRED)
@@ -49,8 +45,49 @@ function(buildExample EXAMPLE_NAME)
     # create executable application
     add_executable(${EXAMPLE_NAME} ${EXAMPLE_APP_SOURCE} ${SHADERS} ${TEXTURES} ${MODELS} ${READMES})
 
-    # link "Mirage Engine" library
-    target_link_libraries(${EXAMPLE_NAME} LINK_PUBLIC mirage)
+    # include dependencies
+    target_include_directories(${EXAMPLE_NAME}
+        PRIVATE
+            ../dependencies/glm
+    )
+
+    # link dependencies
+    target_link_libraries(${EXAMPLE_NAME}
+        PRIVATE
+            mirage                  # link Mirage to access public interfaces
+    )
+
+    # link SDL-related libraries
+    if (EXAMPLE_FOLDER MATCHES "([Ss][Dd][Ll])")
+        message(STATUS "Folder requires SDL lib to be linked")
+
+        find_package(SDL2 REQUIRED)
+
+        target_include_directories(${EXAMPLE_NAME}
+            PRIVATE
+                ${SDL2_INCLUDE_DIRS}
+        )
+        
+        target_link_libraries(${EXAMPLE_NAME}
+            PRIVATE
+                ${SDL2_LIBRARIES}   # link SDL2
+                mirage_sdl          # link Mirage SDL utility library
+        )
+
+    endif()
+
+    # link GLFW-related libraries
+    if (EXAMPLE_FOLDER MATCHES "([Gg][Ll][Ff][Ww])")
+        message(STATUS "Folder requires GLFW lib to be linked")
+
+        target_link_libraries(${EXAMPLE_NAME}
+            PRIVATE
+                ${GLFW_LIBRARIES}   # link GLFW
+                mirage_glfw         # link Mirage GLFW utility library
+        )
+
+    endif()
+
 
 endfunction(buildExample)
 
@@ -65,7 +102,9 @@ endfunction(buildExamples)
 # playground apps
 set(EXAMPLES
     engine
+    glm
     vulkan
+    window_sdl
     # <---- add more examples here
 )
 
