cleanup the setup+provide ccls commands

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Ignore default build folder
 build/
 .vs/
-.ccls_cache/
+.ccls-cache/
 
 # Ignore files
 **/*.DS_Store
+**/*.dylib
 
 # Ignore CMake build in root ./
 CMakeCache.txt
