Tune CMake pipeline and structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "C_Cpp.default.compileCommands": "${workspaceFolder}/build/compile_commands.json",
     "C_Cpp.autoAddFileAssociations": false,
-    "cmake.configureOnOpen": true
+    "cmake.configureOnOpen": true,
+    /* cefine compililation variables [key]: value */
+    "cmake.configureSettings": {}
 }
