hell yeah! make it run!!!1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(Mirage CXX)
 
 enable_language(C)
 enable_language(CXX)
+enable_language(Swift)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
