--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "C_Cpp.autoAddFileAssociations": false,
     "cmake.configureOnOpen": true,
     /* cefine compililation variables [key]: value */
-    "cmake.configureSettings": {}
+    "cmake.configureSettings": {},
+    "cmake.generator": "Ninja"
 }
